[package]
name = "ingrid_core"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Crossword-generating library and CLI tool"
repository = "https://github.com/rf-/ingrid_core"
readme = "README.md"

[dependencies]
smallvec = "1.8.0"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
lazy_static = "1.4.0"
float-ord = "0.3.2"
rand = { version = "0.8.5", features = ["std", "alloc", "getrandom", "std_rng", "small_rng"] }
clap = { version = "4.0.15", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[profile.dev]
codegen-units = 1
lto = true
opt-level = 3

[profile.test]
codegen-units = 1
lto = true
opt-level = 3

[lib]
name = "ingrid_core"
path = "src/lib.rs"

[[bin]]
name = "ingrid_core"
path = "src/bin.rs"

[features]
check_invariants = []
